(BSR)[PRO] fix: multidownload dropdown z-index

--- a/pro/src/components/MultiDownloadButtonsModal/MultiDownloadButtonsModal.module.scss
+++ b/pro/src/components/MultiDownloadButtonsModal/MultiDownloadButtonsModal.module.scss
@@ -1,9 +1,10 @@
 @use "styles/variables/_colors.scss" as colors;
 @use "styles/mixins/_rem.scss" as rem;
 @use "styles/mixins/_fonts.scss" as fonts;
+@use "styles/variables/_z-index.scss" as zIndex;
 
 .download-button-box {
-  z-index: 0;
+  z-index: zIndex.$multidownload-dropdown;
   position: relative;
 
   .download-modal-button > button {
